# Inference_Python_Cpp

./: CMakeLists.txt  README.md  download_mnist.py  test_mnist_libtorch.cpp  test_mnist_pytorch.py  train_mnist.py
